<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#151414"
    android:fillViewport="true"
    tools:context=".ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--header section-->
        <LinearLayout
            android:id="@+id/rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:contentDescription="@string/back_button_image"
                android:src="@drawable/ic_backj" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton"
                style="@style/Widget.Material3.Button.IconButton.Outlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="1"
                android:text="@string/support"
                android:textColor="@color/gray"
                app:icon="@drawable/ic_sms"
                app:iconTint="@color/gray"
                app:strokeColor="@color/gray" />
        </LinearLayout>

        <!--profile section-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_40sdp"
            app:layout_constraintTop_toBottomOf="@id/rl">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_profile"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_margin="@dimen/_8sdp"
                android:src="@drawable/img"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/img_update"
                app:layout_constraintStart_toEndOf="@id/img_profile"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:text="@string/andaz_kumar"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_joining_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:text="@string/member_since_dec_2020"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_10ssp" />
            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_update"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_margin="@dimen/_8sdp"
                android:src="@drawable/pencil"
                android:padding="@dimen/_4sdp"
                android:background="@drawable/round_circle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ll"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <!--garage-->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/garage_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_18sdp"
            app:cardBackgroundColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/profile_layout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_garage"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_18sdp"
                    android:background="@drawable/round_circle"
                    android:src="@drawable/ic_garage"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/grage_ll"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/_8sdp"
                    app:layout_constraintBottom_toBottomOf="@+id/img_garage"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_garage"
                    app:layout_constraintTop_toTopOf="@+id/img_garage">

                    <TextView
                        android:id="@+id/tv_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/get_to_know_your_vehicles_inside_out"
                        android:textColor="@color/gray_light"
                        android:textSize="@dimen/_10ssp" />

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:drawableEnd="@drawable/forward"
                        android:drawablePadding="@dimen/_15sdp"
                        android:text="@string/cred_garage"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <!--list view-->
        <LinearLayout
            android:id="@+id/list_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/garage_card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_speed" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="credit score"
                    android:textColor="@color/gray_light"
                    android:textSize="@dimen/_10ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="• REFRESH AVAILABLE"
                    android:textColor="@color/green"
                    android:paddingHorizontal="@dimen/_4sdp"
                    android:textSize="@dimen/_10ssp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_25sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="757"
                    android:textSize="@dimen/_10ssp"
                    android:textColor="@color/gray_light"
                    app:drawableEndCompat="@drawable/forward"
                    app:drawableTint="@color/gray" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_margin="@dimen/_8sdp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_rupee" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="lifetime cashback"
                    android:textColor="@color/gray_light"
                    android:textSize="@dimen/_10ssp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:drawableEndCompat="@drawable/forward"
                    app:drawableTint="@color/gray"
                    android:text="₹3"
                    android:textColor="@color/gray_light"
                    android:textSize="@dimen/_10ssp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_margin="@dimen/_8sdp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_upi" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="bank balance"
                    android:textColor="@color/gray_light"
                    android:textSize="@dimen/_10ssp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:drawableEndCompat="@drawable/forward"
                    app:drawableTint="@color/gray"
                    android:text="check"
                    android:textColor="@color/gray_light"
                    android:textSize="@dimen/_10ssp" />
            </LinearLayout>
        </LinearLayout>

        <!--reward section-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@color/black"
            android:padding="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/list_ll">

            <TextView
                android:id="@+id/tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_18sdp"
                android:textStyle="bold"
                android:text="@string/your_rewards_benefits"
                android:textColor="@color/gray"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/reward_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_18sdp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/tv">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_10sdp"
                    app:drawableEndCompat="@drawable/small_forward"
                    app:drawableTint="@color/gray"
                    android:text="cashback balance"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="₹0"
                    android:textColor="@color/gray" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:background="@color/gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:drawablePadding="@dimen/_10sdp"
                    app:drawableEndCompat="@drawable/small_forward"
                    app:drawableTint="@color/gray"
                    android:text="coins"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="26,46,583"
                    android:textColor="@color/gray" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:background="@color/gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:drawablePadding="@dimen/_10sdp"
                    app:drawableTint="@color/gray"
                    android:text="win upto Rs 1000"
                    android:textColor="@color/white"
                    app:drawableEndCompat="@drawable/small_forward" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="refer and earn"
                    android:textColor="@color/gray" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_transaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:text="@string/transaction_support"
                android:textColor="@color/gray"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/reward_ll"/>

            <LinearLayout
                android:id="@+id/transaction_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_18sdp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/tv_transaction">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_10sdp"
                    app:drawableTint="@color/gray"
                    android:text="all transactions"
                    android:textColor="@color/white"
                    app:drawableEndCompat="@drawable/small_forward" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>